--- a/06-blog-post.html
+++ b/06-blog-post.html
@@ -6,10 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post</title>
+    <style>
+        figure {
+            margin: 0;
+            padding: 4px;
+            width: fit-content;
+            border: 1px solid #ccc;
+        }
+
+        figure img {
+            width: 400px;
+            height: auto;
+            margin: 0;
+        }
+
+        figure figcaption {
+            margin: 0;
+            font-style: italic;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        figure {
+            margin: 4px 0;
+        }
+
+        figure img:last-child {
+            width: 200px;
+            height: auto;
+        }
+    </style>
 </head>
 
 <body>
+    <header>
+        <h1>Meu blog</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Sobre</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
+    <section>
+        <article>
+            <h1>Título do Post</h1>
+            <figure>
+                <img src="src/christian-wiediger-WkfDrhxDMC8-unsplash(2).jpg" alt="Imagem de um computador" />
+                <figcaption>"Sua única limitação é você mesmo!"</figcaption>
+            </figure>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, aperiam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nesciunt iure commodi accusantium
+                possimus excepturi rem qui eius unde odio sequi, praesentium itaque, officia facere veniam et laboriosam
+                est asperiores?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptate aut maiores voluptates!</p>
+
+            <hr>
+            <cite><strong>Data</strong>: 10/07/2022</cite>
+            <figure>
+                <img src="src/jingyi-lyu-abqLdI_3luU-unsplash(1).jpg" alt="Foto da Lorena Ipisulum" />
+            </figure>
+            <cite><strong>Por</strong>: Lorena Ipisulum</cite>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dicta architecto repellendus laborum
+                nobis a.</p>
+
+        </article>
+    </section>
 </body>
 
 </html>
